// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinishedCreatePolicy expect to render finished error state 1`] = `
<div
  className="pf-l-bullseye"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <svg
        aria-hidden="true"
        aria-labelledby={null}
        className="pf-c-empty-state__icon"
        fill="currentColor"
        height="1em"
        role="img"
        style={
          Object {
            "verticalAlign": "-0.125em",
          }
        }
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M507.73 109.1c-2.24-9.03-13.54-12.09-20.12-5.51l-74.36 74.36-67.88-11.31-11.31-67.88 74.36-74.36c6.62-6.62 3.43-17.9-5.66-20.16-47.38-11.74-99.55.91-136.58 37.93-39.64 39.64-50.55 97.1-34.05 147.2L18.74 402.76c-24.99 24.99-24.99 65.51 0 90.5 24.99 24.99 65.51 24.99 90.5 0l213.21-213.21c50.12 16.71 107.47 5.68 147.37-34.22 37.07-37.07 49.7-89.32 37.91-136.73zM64 472c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
        />
      </svg>
      <br />
      <h1
        className="pf-c-title pf-m-lg"
      >
        Creating policy
      </h1>
      <div
        className="pf-c-empty-state__body"
      >
        <div
          className="pf-c-progress pf-m-danger wizard-progress-bar"
          id="finished-create-policy"
        >
          <div
            aria-hidden="true"
            className="pf-c-progress__description"
            id="finished-create-policy-description"
            onMouseEnter={null}
          >
            Error
          </div>
          <div
            aria-hidden="true"
            className="pf-c-progress__status"
          >
            <span
              className="pf-c-progress__measure"
            >
              0%
            </span>
            <span
              className="pf-c-progress__status-icon"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                />
              </svg>
            </span>
          </div>
          <div
            aria-labelledby="finished-create-policy-description"
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="pf-c-progress__bar"
            role="progressbar"
          >
            <div
              className="pf-c-progress__indicator"
              style={
                Object {
                  "width": "0%",
                }
              }
            >
              <span
                className="pf-c-progress__measure"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="pf-c-empty-state__body wizard-failed-message"
      >
        No more mocked responses for the query: mutation CreateProfile($input: createProfileInput!) {
  createProfile(input: $input) {
    profile {
      id
    }
  }
}
, variables: {"input":{"name":"C2S for Red Hat Enterprise Linux 6","description":"This profile demonstrates compliance against the U.S. Government Commercial Cloud Services (C2S)","complianceThreshold":100,"cloneFromProfileId":"197eb783-7bca-45c5-978d-c1e89b0118da","refId":"xccdf_org.ssgproject.content_profile_C2S","benchmarkId":"a5e7f1ea-e63c-40be-a17a-c2a247c11e10"}}
      </div>
      <div
        className="pf-c-empty-state__secondary"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`FinishedCreatePolicy expect to render without error 1`] = `
<div
  className="pf-l-bullseye"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <svg
        aria-hidden="true"
        aria-labelledby={null}
        className="pf-c-empty-state__icon"
        fill="currentColor"
        height="1em"
        role="img"
        style={
          Object {
            "verticalAlign": "-0.125em",
          }
        }
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M507.73 109.1c-2.24-9.03-13.54-12.09-20.12-5.51l-74.36 74.36-67.88-11.31-11.31-67.88 74.36-74.36c6.62-6.62 3.43-17.9-5.66-20.16-47.38-11.74-99.55.91-136.58 37.93-39.64 39.64-50.55 97.1-34.05 147.2L18.74 402.76c-24.99 24.99-24.99 65.51 0 90.5 24.99 24.99 65.51 24.99 90.5 0l213.21-213.21c50.12 16.71 107.47 5.68 147.37-34.22 37.07-37.07 49.7-89.32 37.91-136.73zM64 472c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
        />
      </svg>
      <br />
      <h1
        className="pf-c-title pf-m-lg"
      >
        Creating policy
      </h1>
      <div
        className="pf-c-empty-state__body"
      >
        <div
          className="pf-c-progress wizard-progress-bar"
          id="finished-create-policy"
        >
          <div
            aria-hidden="true"
            className="pf-c-progress__description"
            id="finished-create-policy-description"
            onMouseEnter={null}
          >
            Progress
          </div>
          <div
            aria-hidden="true"
            className="pf-c-progress__status"
          >
            <span
              className="pf-c-progress__measure"
            >
              0%
            </span>
          </div>
          <div
            aria-labelledby="finished-create-policy-description"
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="pf-c-progress__bar"
            role="progressbar"
          >
            <div
              className="pf-c-progress__indicator"
              style={
                Object {
                  "width": "0%",
                }
              }
            >
              <span
                className="pf-c-progress__measure"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="pf-c-empty-state__body"
      >
        This usually takes a minute or two.
      </div>
      <div
        className="pf-c-empty-state__secondary"
      >
        
      </div>
    </div>
  </div>
</div>
`;
